Use management refresh endpoint in CORS TCKs
Update CORS TCK scenarios to exercise the management refresh endpoint, configure endpoint sensitivity consistently, and verify refresh events are triggered only for allowed requests.

Add the Micronaut management module to the JDK and Netty HTTP server TCK test suites, and simplify test setup by removing the embedded refresh controllers.